--- a/weapp/weixin2/templates/weixin/message/realtime_messages_detail.html
+++ b/weapp/weixin2/templates/weixin/message/realtime_messages_detail.html
@@ -102,10 +102,20 @@
 				   				<div class="drop-box-arrow drop-box-arrow-left"></div>
 								<div class="xui-message-top">
 									<span class="mr50">2015-03-24 16:23:21</span>
+                                    <!--
 									<a href="javascript:void(0);" class="wx_collect_message xui-i-session-btn xui-i-sessionsIcon-starActive" title="取消收藏" ></a>
 									<a href='javascript:void(0);'>
 										<img class="message_remark xui-i-remarkIcon"  title="添加备注"  src="/static_v2/img/weixin/pencil_01.png">
 									</a>
+                                    -->
+                            {{if message.is_collected}}
+                                <a href="javascript:void(0);" class="wx_collect_message xui-i-session-btn xui-i-sessionsIcon-starActive" title="取消收藏" value = ${message.message_id} status="1"></a>
+                            {{else}}
+                                <a href="javascript:void(0);" class="wx_collect_message xui-i-session-btn xui-i-sessionsIcon-star" title="收藏消息" value = ${message.message_id} status="0" ></a>
+                            {{/if}}
+                            <a href='javascript:void(0);'>
+                                <img class="message_remark xui-i-remarkIcon"  title="添加备注"  src="/static_v2/img/weixin/pencil_01.png" data_message_id=${ message.message_id } data_message_value=${ message.remark }>
+                            </a>
 								</div>
 								<div class="xui-message-content">
 									<p>{{html message.text}}</p>
@@ -121,10 +131,20 @@
 							<div class="drop-box-arrow drop-box-arrow-right"></div>
 								<div class="xui-message-top">
 									<span class="mr50">2015-03-24 16:23:21</span>
+                                    <!--
 									<a href="javascript:void(0);" class="wx_collect_message xui-i-session-btn xui-i-sessionsIcon-starActive" title="取消收藏" ></a>
 									<a href='javascript:void(0);'>
 										<img class="message_remark xui-i-remarkIcon"  title="添加备注"  src="/static_v2/img/weixin/pencil_01.png">
 									</a>
+                                    -->
+                                    {{if message.is_collected}}
+                                    <a href="javascript:void(0);" class="wx_collect_message xui-i-session-btn xui-i-sessionsIcon-starActive" title="取消收藏" value = ${message.message_id} status="1"></a>
+                                    {{else}}
+                                    <a href="javascript:void(0);" class="wx_collect_message xui-i-session-btn xui-i-sessionsIcon-star" title="收藏消息" value = ${message.message_id} status="0" ></a>
+                                    {{/if}}
+                                    <a href='javascript:void(0);'>
+                                        <img class="message_remark xui-i-remarkIcon"  title="添加备注"  src="/static_v2/img/weixin/pencil_01.png" data_message_id=${ message.message_id } data_message_value=${ message.remark }>
+                                    </a>
 								</div>
 								<div class="xui-message-content">
 									<p>{{html message.text}}</p>
