--- a/weapp/static_v2/css/new_weixin_message.css
+++ b/weapp/static_v2/css/new_weixin_message.css
@@ -108,6 +108,7 @@
    color: #666;
 }
 .xui-weixin-realtimeMessagePage .xui-message {
+    border-radius:5px;
     min-width: 250px;
     min-height: 60px;
     max-width: 430px;
@@ -128,8 +129,9 @@
 .xui-weixin-realtimeMessagePage .xui-recieved .xui-i-wrapLeft {
    width: 165px;
    float: left;
-   line-height: 50px;
-
+}
+.xui-weixin-realtimeMessagePage .xui-recieved .xui-i-wrapLeft  p {
+    line-height: 50px;
 }
 .xui-weixin-realtimeMessagePage .xui-recieved .xui-i-wrapRight {
     width: 350px;
@@ -139,13 +141,14 @@
 .xui-weixin-realtimeMessagePage .xui-send .xui-i-wrapLeft {
    width: 350px;
    float: left;
-   line-height: 50px;
 
 }
 .xui-weixin-realtimeMessagePage .xui-send .xui-i-wrapRight {
-    width: 165px;
+    width: 190px;
     float: right;
+    line-height: 50px;
 }
+
 
 .xui-weixin-realtimeMessagePage .xui-message-recieved {
     float: left;
@@ -271,21 +274,39 @@
 .xui-weixin-realtimeMessagePage .xui-i-sessionsIcon-remark {
     background: url("/static_v2/img/weixin/star.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
 }
+.xui-weixin-realtimeMessagePage .xui-ellipsis-1{
+    width: 80px;
+    -webkit-line-clamp: 1;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+}
 
 .xui-weixin-realtimeMessagePage .drop-box-arrow{
     /*background: url(/static_v2/img/arrow.png) no-repeat;*/
-   /* position: absolute;
-    width: 14px;
-    height: 14px;*/
+
 }
 .xui-weixin-realtimeMessagePage .drop-box-arrow-left{
-   /* left: -12px;
-    top:23px;
-    -webkit-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    transform: rotate(180deg);*/
+    background: url("/static_v2/img/weixin/dropArrow.png");
+    position: absolute;
+    width: 8px;
+    height: 9px;
+    transform: rotate(-360deg);
+    left: -8px;
+    /* background-size: 16px 38px; */
+    background-position: 0 -10px;
 }
-
+.xui-weixin-realtimeMessagePage .drop-box-arrow-right{
+    background: url("/static_v2/img/weixin/dropArrow.png");
+    position: absolute;
+    width: 8px;
+    height: 9px;
+    transform: rotate(-360deg);
+    right: -8px;
+    /* background-size: 16px 38px; */
+    background-position: 0 0;
+}
 
 .xui-weixin-realtimeMessagePage .xui-i-remarkIcon {
 	margin-top: -10px;
