--- a/weapp/static_v2/css/new_weixin_message.css
+++ b/weapp/static_v2/css/new_weixin_message.css
@@ -101,8 +101,9 @@
 .xui-weixin-realtimeMessagePage .xui-messages {
     background-color: #fff;
     width: 100%;
-    padding: 30px;
+    padding: 20px 30px 0px 30px;
 }
+
 .xui-weixin-realtimeMessagePage .xui-message .xui-message-top{
    margin-bottom: 5px;
    color: #666;
@@ -116,7 +117,6 @@
     border: 1px solid #ccc;
     padding:10px 10px 0px 10px;
     clear: both;
-    margin-bottom: 20px;
 }
 .xui-weixin-realtimeMessagePage .xui-messageWrap {
 }
