--- a/weapp/termite/static/termite_js/app/component/appkit/uploadimg/uploadimg.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/uploadimg/uploadimg.html
@@ -8,7 +8,7 @@
     style=""
 >
 	<h1 class="wui-i-title">{{component.model.title}} {% if component.model.is_mandatory == "true" %}<span class="wui-i-mandatory">(必填)</span>{% endif %}</h1>
-	<div class="wui-i-uploadimg" data-input-name="{{component.model.title}}" data-control-type="appkit.uploadimg">
+	<div class="wui-i-uploadimg xa-inputControl" data-input-type="imgarea" data-input-name="{{component.model.title}}" data-control-type="appkit.uploadimg">
 		<div class="xui-productPhoto mt10">
 			<div class="xui-addPhoto mb10 fl pr">
 				<span class="xui-i-box"></span>
