在售商品待售商品无数据去掉选择框

--- a/weapp/mall/templates/mall/editor/offshelf_products.html
+++ b/weapp/mall/templates/mall/editor/offshelf_products.html
@@ -37,6 +37,7 @@
 			data-disable-header-select="true"
 			data-outer-selecter='.xa-selectAll'
 			class="panel-body"
+			data-selecttable-tr='xa-selectTr'
 		></div>
 		<div style="height:30px;"></div>
 		<div class="xui-batchbtn">
@@ -89,7 +90,7 @@
 		<tbody id='product_list'>
             {{if items.length}}
 	            {{each(i, product) items}}
-				<tr data-id="${product.id}">
+				<tr data-id="${product.id}" class="xa-selectTr">
 					<td class="wui-advanced-table-sort-handler tl_important">
 						<div class="disT w">
 							<div class="imgBox disTc pr xui-imgBox">
