--- a/weapp/weixin2/templates/weixin/message/realtime_messages_detail.html
+++ b/weapp/weixin2/templates/weixin/message/realtime_messages_detail.html
@@ -119,6 +119,9 @@
 								</div>
 								<div class="xui-message-content">
 									<p>{{html message.text}}</p>
+                                    {{if message.remark}}
+                                    备注：<span class="xui-i-remark-text xa-i-remark-text">${message.remark}</span>
+                                    {{/if}}
 								</div>
 							</div>
 						</div>
@@ -148,11 +151,14 @@
 								</div>
 								<div class="xui-message-content">
 									<p>{{html message.text}}</p>
+                                    {{if message.remark}}
+                                    备注：<span class="xui-i-remark-text xa-i-remark-text">${message.remark}</span>
+                                    {{/if}}
 								</div>
 							</div>
 						</div>
 						<div class="xui-i-wrapRight">
-							<p class="pl20 fl mr20 xui-ellipsis-1">{{html message.name}}hhhhhhhhhhh</p>
+							<p class="pl20 fl mr20 xui-ellipsis-1">{{html message.mp_username}}</p>
 							<div class="imgBox disTc pr xui-i-imgBox fr">
 							<a href="{{if message.member_id}}/member/member_detail/edit/?id=${message.member_id}{{else}}javascript:void(0);{{/if}}" {{if message.member_id}}target="_blank"{{/if}}><img src="${message.user_icon}" width="60" height="60"/></a>
 							</div>
