--- a/weapp/static_v2/css/new_weixin_message.css
+++ b/weapp/static_v2/css/new_weixin_message.css
@@ -159,21 +159,28 @@
 
 }
 
-
 .xui-weixin-realtimeMessagePage .xui-message-recieved {
     float: left;
 }
+
 .xui-weixin-realtimeMessagePage .xui-message-send {
     float: right;
     background-color: #f0f0f0;
 }
+
 .xui-weixin-realtimeMessagePage .xui-message .xui-message-content {
     font-size: 12px;
     color: #333;
     line-height: 20px;
 }
 
-
+.xui-weixin-realtimeMessagePage .xui-edit-message-panel {
+    width:580px; 
+    z-index:500;
+    background: #eaeef6;
+    margin-top: 10px;
+    padding-left: 15px;
+}
 
 .xui-weixin-realtimeMessagePage .xui-i-newses {
     background-color: #1C911C;
@@ -222,7 +229,8 @@
 
 .xui-weixin-realtimeMessagePage .xui-i-sessionsImg img {
     border: 0 none;
-    height: auto;
+    width: 50px;
+    height: 50px;
     max-width: 100%;
     vertical-align: middle;
 }
