--- a/weapp/termite/static/termite_js/app/component/appkit/uploadimg/uploadimg.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/uploadimg/uploadimg.html
@@ -10,7 +10,11 @@
 	<h1 class="wui-i-title">{{component.model.title}} {% if component.model.is_mandatory == "true" %}<span class="wui-i-mandatory">(必填)</span>{% endif %}</h1>
 	<div class="wui-i-uploadimg xa-inputControl" data-input-type="imgarea" data-input-name="{{component.model.title}}" data-control-type="appkit.uploadimg">
 		<div class="xui-productPhoto mt10">
-			<div class="xui-addPhoto mb10 fl pr">
+			<div class="xui-addPhoto mb10 fl pr"
+				{% if component.model.is_mandatory == "true" %}
+		 		data-validate='require-upload-img::请上传"{{component.model.title}}"'
+		 		{% endif %}
+			>
 				<span class="xui-i-box"></span>
 				<input id="" name="imgFile123"  data-ui-role="uploadImage" type="file" style="opacity:0;top:0;left:0;width:45px;height:45px;" class="pa">
 			</div>
