1、调整appkit.qa组件的title样式，使之与其他组件一致 2、去掉微信抽奖中的活动规则后的冒号

--- a/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
@@ -180,7 +180,7 @@
             </div>
         </div>
         <div class="wui-i-description xa-description cl pt15 pb15" style="font-size: 14px;margin: 0; color: white;border-top: 1px solid #ab39c4;">
-        <div class="wui-i-settingTitle mr15 mb10">活动规则:</div>
+        <div class="wui-i-settingTitle mr15 mb10">活动规则</div>
         <div style="clear: both; margin-left: 2em;" class="wui-i-description-content">
             {{component.model.description|safe}}
         </div>
