--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -194,14 +194,14 @@
  * 用户调研qa样式
  */
 .wui-QA {
-	padding: 15px 20px 0px 20px;
+	padding: 15px 20px 0 20px;
 }
 .wui-QA .wui-i-title {
 	color: #333;
 	margin-bottom: 10px;
-	font-size: 20px;
+	font-size: 18px;
 	font-weight: bold;
-	border-left: solid 8px #1AA2F8;
+	border-left: solid 4px #1AA2F8;
 	padding-left: 10px;
 }
 .wui-QA .wui-i-mandatory {
