--- a/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
@@ -6,6 +6,11 @@
     	height: 60px;
     	width: 60px;
     }
+    .modal-body .table.table-bordered img{
+    	height: 60px;
+    	width: 60px;
+        margin: 2px;
+    }
     </style>
 {% endblock %}
 {% block content-panel %}
@@ -198,6 +203,7 @@ $(document).ready(function() {
         });
     });
 });
+
 </script>
 {% endblock %}
 
