标记未读消息位置

--- a/weapp/weixin2/templates/weixin/message/realtime_messages.html
+++ b/weapp/weixin2/templates/weixin/message/realtime_messages.html
@@ -152,9 +152,9 @@
 	<div class="checkbox xui-selectBox">
 	<label  for="all">
 		<input type="checkbox" id="xa-selectAll" class="xui-selectAll">
-		全选
+		<span class="ml5">全选</span>
 	</label>
-		<a href="javascript:void(0);" class="dropdown-toggle ml20" data-toggle="dropdown" data-target="#" style="width:96px;">
+		<a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" data-target="#" style="width:96px;margin-left:48px;">
 			标记为已读
 		</a>
 		<ul class="dropdown-menu xui-menu multi-level" role="menu"  aria-labelledby="dropdownMenu">
