需求 4709:功能问题【聊天记录】图片点击另一页面打开

--- a/weapp/weixin2/templates/weixin/message/realtime_messages_detail.html
+++ b/weapp/weixin2/templates/weixin/message/realtime_messages_detail.html
@@ -129,7 +129,7 @@
                                             {{/if}}
                                         {{/if}}
                                         {{if message.message_type == 'image'}}
-                                            <a href="${pic_url}" class="xui-i-sessionsImg">
+                                            <a href="${pic_url}" target="_black" class="xui-i-sessionsImg">
                                                 <img src = "${pic_url}" />
                                             </a>
                                             <br/>
@@ -181,7 +181,7 @@
                                             {{/if}}
                                         {{/if}}
                                         {{if message.message_type == 'image'}}
-                                            <a href="${pic_url}" class="xui-i-sessionsImg">
+                                            <a href="${pic_url}" target="_black" class="xui-i-sessionsImg">
                                                 <img src = "${pic_url}" />
                                             </a>
                                         {{/if}}
