--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -322,7 +322,7 @@
             W.permission = "{{ permission }}";
             if(W.sharePageImg.substr(0,7)!="http://" && W.sharePageImg.substr(0,8)!="https://")
             W.sharePageImg = "http://"+window.location.host+W.sharePageImg;
-
+            var slag = true;
             var link = window.location.href;
             if (link.indexOf('fmt') === -1){
                 if (link.indexOf('&') === -1){
@@ -548,6 +548,16 @@
                 }
             });
             function getParticipance(participanceData,$submitButtonContainer){
+                if (!slag){return;}
+                slag = false;
+                $('body').alert({
+                    isShow: true,
+                    info: '玩命传输中请等待...',
+                    speed: 20000,
+                    callBack: function() {
+
+                    }
+                });
                 W.getApi().call({
                     app: 'm/apps/'+W.appName,
                     resource: W.resource+'_participance',
