--- a/weapp/apps/customerized_apps/survey/templates/webapp/result_survey.html
+++ b/weapp/apps/customerized_apps/survey/templates/webapp/result_survey.html
@@ -47,6 +47,9 @@
     .wui-UploadImg img:last-child{
         margin-right: 0;
     }
+    .xui-productPhoto {
+      display: inline-block;
+    }
     </style>
 
 {% endblock %}
