处理 bug4708：样式问题【聊天记录】名称过长...显示

--- a/weapp/weixin2/templates/weixin/message/realtime_messages_detail.html
+++ b/weapp/weixin2/templates/weixin/message/realtime_messages_detail.html
@@ -89,7 +89,7 @@
             {{if items.length}}
 	            {{each(i, message) items}}
 				<div class="xui-messages cb">
-                    {{if message.name == data.member.name}}
+                    {{if !message.is_reply}}
 					<div class="xui-messageWrap xui-recieved">
 						<div class="xui-i-wrapLeft">
 							<div class="imgBox disTc pr xui-i-imgBox fl">
