--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -665,7 +665,7 @@
 											
 										{{/if}}
 									</div>
-									<div class="xui-hide xa-seconde-navs-prompt" style="color:#888;margin-top:3px;">请选择二级菜单链接</div>
+									<div class="xui-hide xa-seconde-navs-prompt" style="color:#888;margin-top:3px;">请选择二级${dynamicComponentField.otherUpdateDisplayName}链接</div>
 									<div class="errorHint"></div>
 								</div>
 								{{/if}}
