查看结果：图片OK

--- a/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
@@ -11,10 +11,8 @@
     	width: 60px;
         margin: 2px;
     }
-    .xa-uploadimg_box.inactive{
+    .xa-uploadimg_box{
         display: none;
-    }
-    .xa-uploadimg_box.active{
         position: absolute;
         background-color: #DDDDDD;
         border: 2px solid #DDDDDD;
@@ -29,7 +27,7 @@
         top: 0; right: 0;
         z-index: 1000000;
     }
-    .xa-uploadimg_box.active .xa-uploadimg{
+    .xa-uploadimg_box .xa-uploadimg{
         max-width: 100%;
         max-height: 100%;
         overflow: auto;
