--- a/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
@@ -21,6 +21,7 @@
         overflow: auto;
         margin: auto;
         top: 50%; left: 0; bottom: 0; right: 0;
+        text-align: center;
     }
     .xa-uploadimg_box .xa-close_btn{
         position: absolute;
